Update: main - Diff report completed

--- a/beta/diff_new_sensor.html
+++ b/beta/diff_new_sensor.html
@@ -210,8 +210,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-270711" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{beta/custom_components → ha-core/homeassistant/components}/plugwise/strings.json</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+101</span>
-          <span class="d2h-lines-deleted">-66</span>
+          <span class="d2h-lines-added">+102</span>
+          <span class="d2h-lines-deleted">-67</span>
       </span>
     </span>
 </li>
@@ -43630,23 +43630,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
-      
-    </td>
-    <td class="d2h-cntx d2h-emptyplaceholder">
-        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn"><br></span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-del d2h-change">
       105
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">          &quot;auto&quot;: &quot;Auto&quot;,</span>
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">          &quot;<del>auto</del>&quot;: &quot;<del>Auto</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -43656,7 +43646,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">          &quot;boost&quot;: &quot;<del>Boost</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">          &quot;<del>boost</del>&quot;: &quot;<del>Boost</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -43666,7 +43656,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">          &quot;comfort&quot;: &quot;<del>Comfort</del>&quot;<del>,</del></span>
+            <span class="d2h-code-line-ctn">          &quot;<del>comfort</del>&quot;: &quot;<del>Comfort</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -43676,7 +43666,17 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><del>          &quot;off&quot;: &quot;Off&quot;</del></span>
+            <span class="d2h-code-line-ctn">          &quot;<del>off</del>&quot;: &quot;<del>Off</del>&quot;</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
+      
+    </td>
+    <td class="d2h-cntx d2h-emptyplaceholder">
+        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
@@ -45465,7 +45465,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">          &quot;host&quot;: &quot;The hostname or IP-address of your Smile. You can find it in your router or the Plugwise App.&quot;,</span>
+            <span class="d2h-code-line-ctn">          &quot;host&quot;: &quot;The hostname or IP-address of your Smile. You can find it in your router or the Plugwise app.&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -46149,23 +46149,23 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-ins">
+    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
       115
     </td>
-    <td class="d2h-ins">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">          &quot;off&quot;: &quot;[%key:common::state::off%]&quot;,</span>
+            <span class="d2h-code-line-ctn">          &quot;<ins>off</ins>&quot;: &quot;<ins>[%key:common::state::off%]</ins>&quot;,</span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
       116
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">          &quot;auto&quot;: &quot;Auto&quot;,</span>
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">          &quot;<ins>auto</ins>&quot;: &quot;<ins>[%key:common::state::auto%]</ins>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -46175,7 +46175,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">          &quot;boost&quot;: &quot;<ins>[%key:component::climate::entity_component::_::state_attributes::preset_mode::state::boost%]</ins>&quot;,</span>
+            <span class="d2h-code-line-ctn">          &quot;<ins>boost</ins>&quot;: &quot;<ins>[%key:component::climate::entity_component::_::state_attributes::preset_mode::state::boost%]</ins>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -46185,17 +46185,17 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">          &quot;comfort&quot;: &quot;<ins>[%key:component::climate::entity_component::_::state_attributes::preset_mode::state::comfort%]</ins>&quot;</span>
+            <span class="d2h-code-line-ctn">          &quot;<ins>comfort</ins>&quot;: &quot;<ins>[%key:component::climate::entity_component::_::state_attributes::preset_mode::state::comfort%]</ins>&quot;</span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
+    <td class="d2h-code-side-linenumber d2h-ins">
       119
     </td>
-    <td class="d2h-ins d2h-change">
+    <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>        }</ins></span>
+            <span class="d2h-code-line-ctn">        }</span>
         </div>
     </td>
 </tr><tr>
