--- a/beta/diff_main.html
+++ b/beta/diff_main.html
@@ -44340,7 +44340,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">          &quot;host&quot;: &quot;The hostname or IP-address of your Smile. You can find it in your router or the Plugwise app.&quot;,</span>
+            <span class="d2h-code-line-ctn">          &quot;host&quot;: &quot;The hostname or IP address of your Smile. You can find it in your router or the Plugwise app.&quot;,</span>
         </div>
     </td>
 </tr><tr>
