--- a/beta/index.html
+++ b/beta/index.html
@@ -30,6 +30,8 @@
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
 
+                        <li><a href='diff_syrupy.html'>Unified diff core:dev vs beta:origin/syrupy</a></li>
+
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
