Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -26,6 +26,8 @@
 
                         <li><a href='diff_pw-1-4-4.html'>Unified diff core:dev vs beta:origin/pw-1-4-4</a></li>
 
+                        <li><a href='diff_pw1_7_5.html'>Unified diff core:dev vs beta:origin/pw1_7_5</a></li>
+
                         <li><a href='diff_rework_runtime_updating.html'>Unified diff core:dev vs beta:origin/rework_runtime_updating</a></li>
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
