--- a/beta/index.html
+++ b/beta/index.html
@@ -24,15 +24,11 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
-                        <li><a href='diff_pw-1-4-4.html'>Unified diff core:dev vs beta:origin/pw-1-4-4</a></li>
-
                         <li><a href='diff_pw1_7_5.html'>Unified diff core:dev vs beta:origin/pw1_7_5</a></li>
 
-                        <li><a href='diff_rework_runtime_updating.html'>Unified diff core:dev vs beta:origin/rework_runtime_updating</a></li>
-
-                        <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
-
                         <li><a href='diff_syrupy.html'>Unified diff core:dev vs beta:origin/syrupy</a></li>
+
+                        <li><a href='diff_uvpip.html'>Unified diff core:dev vs beta:origin/uvpip</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
