Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -26,7 +26,7 @@
 
                         <li><a href='diff_pw1_7_5.html'>Unified diff core:dev vs beta:origin/pw1_7_5</a></li>
 
-                        <li><a href='diff_syrupy.html'>Unified diff core:dev vs beta:origin/syrupy</a></li>
+                        <li><a href='diff_renovate/pycqa-bandit-1.x.html'>Unified diff core:dev vs beta:origin/renovate/pycqa-bandit-1.x</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
