--- a/beta/index.html
+++ b/beta/index.html
@@ -16,8 +16,6 @@
 
                         <li><a href='diff_add_weather.html'>Unified diff core:dev vs beta:origin/add_weather</a></li>
 
-                        <li><a href='diff_alignci.html'>Unified diff core:dev vs beta:origin/alignci</a></li>
-
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
@@ -26,7 +24,9 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
-                        <li><a href='diff_pw1_7_5.html'>Unified diff core:dev vs beta:origin/pw1_7_5</a></li>
+                        <li><a href='diff_sc-fixes.html'>Unified diff core:dev vs beta:origin/sc-fixes</a></li>
+
+                        <li><a href='diff_test-blocking.html'>Unified diff core:dev vs beta:origin/test-blocking</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
