--- a/beta/index.html
+++ b/beta/index.html
@@ -16,6 +16,8 @@
 
                         <li><a href='diff_add_weather.html'>Unified diff core:dev vs beta:origin/add_weather</a></li>
 
+                        <li><a href='diff_ciimprove.html'>Unified diff core:dev vs beta:origin/ciimprove</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
