Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -26,6 +26,8 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
+                        <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
+
                         <li><a href='diff_sc-fixes.html'>Unified diff core:dev vs beta:origin/sc-fixes</a></li>
 
                         <li><a href='diff_test-blocking.html'>Unified diff core:dev vs beta:origin/test-blocking</a></li>
