Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -26,11 +26,7 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
-                        <li><a href='diff_renovate/biomejs-pre-commit-2.x.html'>Unified diff core:dev vs beta:origin/renovate/biomejs-pre-commit-2.x</a></li>
-
-                        <li><a href='diff_sc-fixes.html'>Unified diff core:dev vs beta:origin/sc-fixes</a></li>
-
-                        <li><a href='diff_test-blocking.html'>Unified diff core:dev vs beta:origin/test-blocking</a></li>
+                        <li><a href='diff_pw_1_7_7.html'>Unified diff core:dev vs beta:origin/pw_1_7_7</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
