--- a/beta/diff_add_weather.html
+++ b/beta/diff_add_weather.html
@@ -66,8 +66,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-805166" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{beta/custom_components → ha-core/homeassistant/components}/plugwise/__init__.py</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+19</span>
-          <span class="d2h-lines-deleted">-89</span>
+          <span class="d2h-lines-added">+23</span>
+          <span class="d2h-lines-deleted">-93</span>
       </span>
     </span>
 </li>
@@ -760,16 +760,76 @@
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -59,44 +33,16 @@</div>
+        <div class="d2h-code-side-line">@@ -53,50 +27,22 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      59
+      53
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">        sw_version=str(coordinator.api.smile_version),</span>
+            <span class="d2h-code-line-ctn">        config_entry_id=entry.entry_id,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      54
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">        identifiers={(DOMAIN, str(coordinator.api.gateway_id))},</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      55
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">        manufacturer=&quot;Plugwise&quot;,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-del d2h-change">
+      56
+    </td>
+    <td class="d2h-del d2h-change">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">        model=coordinator.api.<del>smile_model</del>,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-del d2h-change">
+      57
+    </td>
+    <td class="d2h-del d2h-change">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">        model_id=coordinator.api.<del>smile_model_id</del>,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-del d2h-change">
+      58
+    </td>
+    <td class="d2h-del d2h-change">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">        name=coordinator.api.<del>smile_name</del>,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-del d2h-change">
+      59
+    </td>
+    <td class="d2h-del d2h-change">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">        sw_version=str(coordinator.api.<del>smile_version</del>),</span>
         </div>
     </td>
 </tr><tr>
@@ -2203,12 +2263,72 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      33
+      27
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">        sw_version=str(coordinator.api.smile_version),</span>
+            <span class="d2h-code-line-ctn">        config_entry_id=entry.entry_id,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      28
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">        identifiers={(DOMAIN, str(coordinator.api.gateway_id))},</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      29
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">        manufacturer=&quot;Plugwise&quot;,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
+      30
+    </td>
+    <td class="d2h-ins d2h-change">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">        model=coordinator.api.<ins>smile.model</ins>,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
+      31
+    </td>
+    <td class="d2h-ins d2h-change">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">        model_id=coordinator.api.<ins>smile.model_id</ins>,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
+      32
+    </td>
+    <td class="d2h-ins d2h-change">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">        name=coordinator.api.<ins>smile.name</ins>,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
+      33
+    </td>
+    <td class="d2h-ins d2h-change">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">        sw_version=str(coordinator.api.<ins>smile.version</ins>),</span>
         </div>
     </td>
 </tr><tr>
@@ -11552,7 +11672,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        <ins>if</ins> <ins>coordinator.api.smile_name</ins> =<ins>=</ins> <ins>&quot;Adam&quot;:</ins></span>
+            <span class="d2h-code-line-ctn">        <ins>if</ins> <ins>coordinator.api.smile.name</ins> =<ins>=</ins> <ins>&quot;Adam&quot;:</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -12237,7 +12357,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            and <ins>coordinator</ins>.<ins>api.smile_name</ins> != &quot;Adam&quot;</span>
+            <span class="d2h-code-line-ctn">            and <ins>coordinator</ins>.<ins>api.smile.name</ins> != &quot;Adam&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -19500,7 +19620,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>                    api.smile_hostname</ins> <ins>or</ins> <ins>api</ins>.<ins>gateway_id,</ins></span>
+            <span class="d2h-code-line-ctn"><ins>                    api.smile.hostname</ins> <ins>or</ins> <ins>api</ins>.<ins>gateway_id,</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -19540,7 +19660,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>                return</ins> <ins>self.async_create_entry(title=api.smile_name, data=user_input)</ins></span>
+            <span class="d2h-code-line-ctn"><ins>                return</ins> <ins>self.async_create_entry(title=api.smile.name, data=user_input)</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -20410,7 +20530,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">                    api.smile_hostname or api.gateway_id,</span>
+            <span class="d2h-code-line-ctn">                    api.smile.hostname or api.gateway_id,</span>
         </div>
     </td>
 </tr><tr>
@@ -29897,7 +30017,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            name=coordinator.<ins>api</ins>.<ins>smile_name</ins>,</span>
+            <span class="d2h-code-line-ctn">            name=coordinator.<ins>api</ins>.<ins>smile.name</ins>,</span>
         </div>
     </td>
 </tr><tr>
@@ -30718,7 +30838,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: <ins>[</ins>&quot;<ins>plugwise==1</ins>.<ins>7</ins>.<ins>6</ins>&quot;<ins>]</ins>,</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: <ins>[</ins>&quot;<ins>plugwise==1</ins>.<ins>7</ins>.<ins>7</ins>&quot;<ins>]</ins>,</span>
         </div>
     </td>
 </tr><tr>
