Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -26,6 +26,8 @@
 
                         <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
 
+                        <li><a href='diff_renovate/pycqa-bandit-1.x.html'>Unified diff core:dev vs beta:origin/renovate/pycqa-bandit-1.x</a></li>
+
                         <li><a href='diff_snap.html'>Unified diff core:dev vs beta:origin/snap</a></li>
 
                 </ul>
