Update: main - Diff report completed

--- a/beta/diff.html
+++ b/beta/diff.html
@@ -9506,7 +9506,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        if <del>&quot;available_schedules&quot; in </del>self.device:</span>
+            <span class="d2h-code-line-ctn">        if self.device.get(<del>&quot;available_schedules&quot;</del>):</span>
         </div>
     </td>
 </tr><tr>
@@ -12370,7 +12370,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        if self.device<ins>.get(AVAILABLE_SCHEDULES)</ins>:</span>
+            <span class="d2h-code-line-ctn">        if self.device.get(<ins>AVAILABLE_SCHEDULES</ins>):</span>
         </div>
     </td>
 </tr><tr>
@@ -27509,7 +27509,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  <del>&quot;requirements&quot;: [&quot;plugwise==1.7.7&quot;</del>],</span>
+            <span class="d2h-code-line-ctn">  <del>&quot;requirements&quot;: [&quot;plugwise==1.7.8&quot;</del>],</span>
         </div>
     </td>
 </tr><tr>
@@ -30630,7 +30630,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><del>            if</del> description<del>.options_key</del> in <del>coordinator.data[device_id]</del></span>
+            <span class="d2h-code-line-ctn"><del>            if</del> <del>coordinator.data[device_id].get(</del>description<del>.options_key)</del></span>
         </div>
     </td>
 </tr><tr>
@@ -30905,7 +30905,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    def current_option(self) -&gt; str:</span>
+            <span class="d2h-code-line-ctn">    def current_option(self) -&gt; str<del> </del>| None:</span>
         </div>
     </td>
 </tr><tr>
@@ -31799,7 +31799,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>        #     for</ins> description in <ins>SELECT_TYPES</ins></span>
+            <span class="d2h-code-line-ctn"><ins>        #     for</ins> description<ins> in SELECT_TYPES</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -32074,7 +32074,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    def current_option(self) -&gt; str<ins>| None</ins>:</span>
+            <span class="d2h-code-line-ctn">    def current_option(self) -&gt; str| None:</span>
         </div>
     </td>
 </tr><tr>
