--- a/beta/diff_main.html
+++ b/beta/diff_main.html
@@ -9506,7 +9506,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        if self.device<del>.get(AVAILABLE_SCHEDULES)</del>:</span>
+            <span class="d2h-code-line-ctn">        if self.device.get(<del>AVAILABLE_SCHEDULES</del>):</span>
         </div>
     </td>
 </tr><tr>
@@ -12370,7 +12370,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        if <ins>&quot;available_schedules&quot; in </ins>self.device:</span>
+            <span class="d2h-code-line-ctn">        if self.device.get(<ins>&quot;available_schedules&quot;</ins>):</span>
         </div>
     </td>
 </tr><tr>
@@ -27683,7 +27683,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  <ins>&quot;requirements&quot;: [&quot;plugwise==1.7.7&quot;</ins>],</span>
+            <span class="d2h-code-line-ctn">  <ins>&quot;requirements&quot;: [&quot;plugwise==1.7.8&quot;</ins>],</span>
         </div>
     </td>
 </tr><tr>
@@ -30650,7 +30650,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><del>        #     for</del> description in <del>SELECT_TYPES</del></span>
+            <span class="d2h-code-line-ctn"><del>        #     for</del> description<del> in SELECT_TYPES</del></span>
         </div>
     </td>
 </tr><tr>
@@ -30925,7 +30925,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    def current_option(self) -&gt; str<del>| None</del>:</span>
+            <span class="d2h-code-line-ctn">    def current_option(self) -&gt; str| None:</span>
         </div>
     </td>
 </tr><tr>
@@ -31819,7 +31819,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>            if</ins> description<ins>.options_key</ins> in <ins>coordinator.data[device_id]</ins></span>
+            <span class="d2h-code-line-ctn"><ins>            if</ins> <ins>coordinator.data[device_id].get(</ins>description<ins>.options_key)</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -32094,7 +32094,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    def current_option(self) -&gt; str:</span>
+            <span class="d2h-code-line-ctn">    def current_option(self) -&gt; str<ins> </ins>| None:</span>
         </div>
     </td>
 </tr><tr>
