--- a/beta/diff_new_sensor.html
+++ b/beta/diff_new_sensor.html
@@ -186,8 +186,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-867046" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{beta/custom_components → ha-core/homeassistant/components}/plugwise/select.py</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+51</span>
-          <span class="d2h-lines-deleted">-60</span>
+          <span class="d2h-lines-added">+52</span>
+          <span class="d2h-lines-deleted">-61</span>
       </span>
     </span>
 </li>
@@ -11575,7 +11575,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        if &quot;available_schedules&quot; in self.device:</span>
+            <span class="d2h-code-line-ctn">        if self.device.get(&quot;available_schedules&quot;):</span>
         </div>
     </td>
 </tr><tr>
@@ -27418,7 +27418,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: <ins>[</ins>&quot;<ins>plugwise==1</ins>.<ins>7</ins>.<ins>7</ins>&quot;<ins>],</ins></span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: <ins>[</ins>&quot;<ins>plugwise==1</ins>.<ins>7</ins>.<ins>8</ins>&quot;<ins>],</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -31170,7 +31170,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><del>                    &quot;Add</del> <del>%s</del> <del>%s</del> <del>selector&quot;, device</del>[<del>&quot;name&quot;</del>]<del>, description.translation_key</del></span>
+            <span class="d2h-code-line-ctn"><del>                    &quot;Add</del> <del>%s %s selector&quot;, device</del>[<del>&quot;name&quot;</del>]<del>, </del>description.<del>translation_key</del></span>
         </div>
     </td>
 </tr><tr>
@@ -31369,12 +31369,12 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-del d2h-change">
       113
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-prefix">-</span>
             <span class="d2h-code-line-ctn">    def current_option(self) -&gt; str:</span>
         </div>
     </td>
@@ -32569,7 +32569,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>            if</ins> <ins>description.options_key</ins> <ins>in</ins> <ins>coordinator.data</ins>[<ins>device_id</ins>]</span>
+            <span class="d2h-code-line-ctn"><ins>            if</ins> <ins>coordinator.data</ins>[<ins>device_id</ins>]<ins>.get(</ins>description.<ins>options_key)</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -32768,13 +32768,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
       101
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">    def current_option(self) -&gt; str:</span>
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">    def current_option(self) -&gt; str<ins> | None</ins>:</span>
         </div>
     </td>
 </tr><tr>
