Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -16,6 +16,8 @@
 
                         <li><a href='diff_anna_thermozone.html'>Unified diff core:dev vs beta:origin/anna_thermozone</a></li>
 
+                        <li><a href='diff_emma-zigbee.html'>Unified diff core:dev vs beta:origin/emma-zigbee</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
