Update: main - Diff report completed

--- a/beta/diff_anna_thermozone.html
+++ b/beta/diff_anna_thermozone.html
@@ -27359,7 +27359,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><del>    </del>&quot;<del>https</del>:<del>&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;e7&#x2F;1c&#x2F;fd68b64e588cae5d1426693e24b01ff6076d3510b1e361214bd84d990c28&#x2F;</del>plugwise<del>-1.8.0a0.tar.gz#plugwise</del>==1.<del>8</del>.<del>0a0</del>&quot;</span>
+            <span class="d2h-code-line-ctn"><del>    </del>&quot;<del>https</del>:<del>&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;e7&#x2F;1c&#x2F;fd68b64e588cae5d1426693e24b01ff6076d3510b1e361214bd84d990c28&#x2F;</del>plugwise<del>-1.8.0a0.tar.gz#plugwise</del>==1.8.<del>0a0</del>&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -27523,7 +27523,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>  </ins>&quot;<ins>requirements&quot;</ins>:<ins> [&quot;</ins>plugwise==1.<ins>7</ins>.<ins>8</ins>&quot;<ins>],</ins></span>
+            <span class="d2h-code-line-ctn"><ins>  </ins>&quot;<ins>requirements&quot;</ins>:<ins> [&quot;</ins>plugwise==1.8.<ins>0</ins>&quot;<ins>],</ins></span>
         </div>
     </td>
 </tr><tr>
