Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -16,6 +16,8 @@
 
                         <li><a href='diff_anna_thermozone.html'>Unified diff core:dev vs beta:origin/anna_thermozone</a></li>
 
+                        <li><a href='diff_improve-delete.html'>Unified diff core:dev vs beta:origin/improve-delete</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
@@ -25,6 +27,8 @@
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
                         <li><a href='diff_py314.html'>Unified diff core:dev vs beta:origin/py314</a></li>
+
+                        <li><a href='diff_renovate/biomejs-pre-commit-2.x.html'>Unified diff core:dev vs beta:origin/renovate/biomejs-pre-commit-2.x</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
