Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -28,9 +28,9 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
-                        <li><a href='diff_pw-1.9.0.html'>Unified diff core:dev vs beta:origin/pw-1.9.0</a></li>
-
                         <li><a href='diff_py314.html'>Unified diff core:dev vs beta:origin/py314</a></li>
+
+                        <li><a href='diff_remove_diagn.html'>Unified diff core:dev vs beta:origin/remove_diagn</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
